@@ -1,3 +1,8 @@
+2015-11-27  c.hetherington  <cth@carlh.net>
+
+	* Hopefully fix truncated text in the colour conversion dialog
+	on OS X.
+
 2015-11-26  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.5.9 released.
